--- a/hello/indexm.html
+++ b/hello/indexm.html
@@ -1,59 +1,46 @@
 <!DOCTYPE html>
 
-
 <html lang="pt-br"
 
-<head>
+chead>
 
-<meta charset="UTF-8">
+<meta charsets"UTF-8">
 
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <meta name="viewport" contents"widthedevice-width, initial-scale=1.0">
 
-<title>Site de Teste</title>
-
-<style>
-
-body {
-
-font-family: Arial, Helvetica, sans-serif;
-
-background-color: blue;
-
-
-color: white;
-}
-
-</style>
-
-</head>
- <body>
-
-<h1>Isso é um teste</h1>
-
- </body>
-
-</html>
-<!DOCTYPE html>
-
-<html lange pt-br">
+<title>Adicionando conteúdos</title>
 
 </head>
 
-neta charset="UTF-8">
+<body> chi Conteúdos dentro de iframes</h1>
 
-meta name="viewport" content="width=device-width, initial-scale-1.0" </head>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem, ipsal Exercitationem
 
-<title>Iframes /title>
+deleniti dolorum perferendis officiis expedita dignissimos optio, aliquam distinctio beatae illum sed. Sint, minima molestiae? Possimus assumenda sapiente eum?</p> <h2 Videos</h2> 12 <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.
 
-<body>
+vimeo.com/video/265045525" style="position:absolute;top:0;left:0;width:100%;
 
-hi Meu site principal</h1> p Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam debitis voluptas quam. Itaque porro autem ab repellendus provident quas quaerat saepe vitae ratione repellat corporis, ex deserunt eum cupiditate debitis?</p> iframe srce paginas-extras/pag004.html" sandbox"allow-same-origin
+height:100%;" frameborder="0" allow="autoplay: fullscreen allowfullscreen></iframe></
 
-allow-forms allow-scripts" referrerpolicys"no-referrer" Seu navegador não é compatível com isso...
+divescript src="https://player.vimeo.com/apl/player.js"></script>
 
-</iframe>
+<h2>Mapas do Google</h2>
 
-<p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, laboriosam consequatur facilis voluptatibus impedit fugiat eum porro quos quas, culpa iure id nemo laborum similique ipsam iusto neque, maiores odio.</p>
+<iframe src="https://www.google.com/maps/embed? pb11m18!1m12!1m311d14760.77573120736812d-43.
 
-<body>
-</Html>
+18195715531073413d-22.
+
+90621671011693612m311fe12fe13fel 3m2111182412176814f13. 11 3m311m2!1s0x997458a6a00a9d%3A0x3f251d85272f76f712sHostnet
+
+20Interneti5e013m211spt-BR12sbr14v159412815646115m211spt-BR! 2sbr" width="600" height="450" frameborders"0"
+
+styles "border:0;" allowfullscreen="" aria-hidden"false"
+
+tabindex="0"></iframe>
+
+<h2 Mapas do waze</h2>
+
+iframe srce"https://embed.waze.com/iframe?zoom1681ats-22 90244981ons-43.1745918ct livemap" width="600" height="450" allowfullscreen/iframe>
+</body>
+<Html>
+
