--- a/hello/login.html
+++ b/hello/login.html
@@ -1,17 +1,13 @@
 <!DOCTYPE html>
-
 <html lang="pt-br">
-
 <head>
 
 <meta charset="UTF-8">
-
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
- <title>Login</title>
+<title>Login</title>
 
 <link rel="stylesheet" href="estilos/style.css">
-<link rel =stylesheet" href="estilos/midia-query>
+<link rel="stylesheet" href="estilos/midia-query">
 
 </head>
 
@@ -30,7 +26,7 @@
 <h1>Login</h1>
 
 <p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta e poder fazer as configurações no seu ambiente.</p> <form action="login.php" method="post">
-<form action="loging.php" method = " post";>
+<form action="loging.php" method = "post">
 
 </form>
 
