--- a/hello/login.html
+++ b/hello/login.html
@@ -7,7 +7,7 @@
 <title>Login</title>
 
 <link rel="stylesheet" href="estilos/style.css">
-<link rel="stylesheet" href="estilos/midia-query">
+<link rel="stylesheet" href="estilos/media-query.css">
 
 </head>
 
