--- a/hello/login.html
+++ b/hello/login.html
@@ -25,7 +25,7 @@
 
 <h1>Login</h1>
 
-<p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta e poder fazer as configurações no seu ambiente.</p> <form action="login.php" method="post">
+<p>Seja bem-vindo(a) a Dragonfly faça loging .</p> <form action="login.php" method="post">
 <form action="loging.php" method = "post">
 
 </form>
