--- a/hello/login.html
+++ b/hello/login.html
@@ -25,7 +25,7 @@
 
 <h1>Login</h1>
 
-<p>Seja bem-vindo(a) a Dragonfly faça loging .</p> <form action="login.php" method="post">
+<p>Seja bem-vindo(a) a Dragonfly  .</p> <form action="login.php" method="post">
 <form action="loging.php" method = "post">
 
 </form>
@@ -33,6 +33,13 @@
 </div>
 
 </section>
+
+<div class="cabesario">
+    <button> Loging</button>
+    <button>carrinho</button>
+    <button>produtos</button>
+    <button>cadastro</button>
+</div>
 
 </main> 
 </body>
