--- a/hello/login.html
+++ b/hello/login.html
@@ -36,6 +36,8 @@
 
 <div class="cabesario">
     <button> Loging</button>
+    <button>usario </button>
+    < button>senha</button>
     <button>carrinho</button>
     <button>produtos</button>
     <button>cadastro</button>
