--- a/hello/login.html
+++ b/hello/login.html
@@ -37,7 +37,11 @@
 <div class="cabesario">
     <button> Loging</button>
     <button>usario </button>
-    < button>senha</button>
+    <button>senha</button>
+  >
+</div>
+
+<div>
     <button>carrinho</button>
     <button>produtos</button>
     <button>cadastro</button>
