--- a/hello/login.html
+++ b/hello/login.html
@@ -35,9 +35,9 @@
 </section>
 
 <div class="cabesario">
-    <button> Loging</button>
-    <button>usario </button>
-    <button>senha</button>
+  
+    <p> usuario</p>
+    <p> senha</p>
   >
 </div>
 
