--- a/hello/login.html
+++ b/hello/login.html
@@ -23,9 +23,9 @@
 
 <div id="formulario">
 
-<h1>Login</h1>
+<h1>bem vi ndo a Dragonfly</h1>
 
-<p>Seja bem-vindo(a) a Dragonfly  .</p> <form action="login.php" method="post">
+<p>loging .</p> <form action="login.php" method="post">
 <form action="loging.php" method = "post">
 
 </form>
@@ -37,13 +37,11 @@
 <div class="cabesario">
   
     <p> usuario</p>
-    <p> senha</p>
+    <p> senha </p>
   >
 </div>
 
 <div>
-    <button>carrinho</button>
-    <button>produtos</button>
     <button>cadastro</button>
 </div>
 
