--- a/hello/login.html
+++ b/hello/login.html
@@ -25,7 +25,7 @@
 
 <h1>bem vindo a Dragonfly</h1>
 
-<p>loging .</p> <form action="login.php" method="post">
+<p>loging </p> <form action="login.php" method="post">
 <form action="loging.php" method = "post">
 
 </form>
@@ -38,6 +38,7 @@
   
     <p> usuario</p>
     <p> senha </p>
+    <p>entrar</p>
   
 </div>
 
