--- a/hello/login.html
+++ b/hello/login.html
@@ -6,8 +6,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Login</title>
 
-<link rel="stylesheet" href="estilos/style.css">
-<link rel="stylesheet" href="estilos/media-query.css">
+<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="media-query.css">
 
 </head>
 
